--- a/client/src/PortfolioContainer/Home/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile.css
@@ -1,3 +1,93 @@
 .profile-container {
+  display: flex;
+  align-items: center;
   text-align: center;
+  justify-content: center;
+  height: 10%;
+  min-height: fit-content;
+  background-image: url('../../assets/Home/bg.jpg');
+}
+
+.profile-parent {
+  display: flex;
+  align-items: center;
+  color: aliceblue;
+}
+
+.profile-details-name {
+  font-size: 1.5em;
+  font-family: 'Poppins SemiBold';
+}
+
+.profile-details-role {
+  display: flex;
+  flex-direction: column;
+  margin: 0.8em 0 1.5em 0;
+}
+
+.profile-details-role h1 {
+  font-size: 2.5em;
+  font-family: cursive;
+}
+
+.primary-text {
+  color: var(--white);
+}
+
+.highlighted-text {
+  color: var(--dark-orange);
+}
+
+.profile-role-tagline {
+  font-size: 1.2em;
+  font-family: 'Poppins Light';
+}
+
+.profile-options .highlighted-btn {
+  margin-left: 1.8em;
+}
+
+.profile-options .highlighted-btn:hover {
+  background-color: cornsilk;
+  color: #111;
+}
+
+.profile-picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 1px 0px 0px var(--white);
+  border-radius: 50%;
+  height: 380px;
+  width: 380px;
+  margin-left: 6em;
+}
+
+.profile-picture-background {
+  height: 92%;
+  width: 92%;
+  border-radius: 50%;
+  background-image: url('../../assets/Home/profilephoto.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.profile-picture-background:hover {
+  transform: scale(1.08);
+  transition: 0.8s ease-out;
+}
+
+.profile-picture-background:not(:hover) {
+  transform: scale(1);
+  transition: 1s ease-out;
+}
+
+.colz .colz-icon i {
+  color: var(--white);
+  padding: 0.5em;
+  padding-left: 0px;
+}
+
+.colz .colz-icon i:hover {
+  transform: scale(1.5);
 }
