--- a/client/src/PortfolioContainer/Home/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile.css
@@ -91,3 +91,62 @@
 .colz .colz-icon i:hover {
   transform: scale(1.5);
 }
+
+@media only screen and (max-width: 1110px) {
+  .profile-picture {
+    margin-left: 5em;
+  }
+  .profile-details-name {
+    font-size: 1.25em;
+  }
+  .profile-details-role .primary-text {
+    font-size: 0.75em;
+  }
+  .profile-options .btn {
+    width: 120px;
+    padding: 0.7em 0;
+    z-index: 700;
+  }
+}
+
+@media only screen and (max-width: 910px) {
+  .profile-picture {
+    margin-left: 1em;
+    height: 320px;
+    width: 320px;
+  }
+}
+
+@media only screen and (max-width: 810px) {
+  .profile-picture {
+    margin: 0 !important;
+  }
+  .profile-parent {
+    flex-direction: column-reverse;
+    margin-top: 2.5em;
+  }
+  .profile-options {
+    display: flex;
+    justify-content: space-between;
+  }
+  .profile-details {
+    margin-top: 1.6em;
+  }
+  .profile-options .highlighted-btn {
+    margin: 0 !important;
+  }
+  .profile-details-name,
+  .profile-details-role {
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 460px) {
+  .profile-picture {
+    height: 250px;
+    width: 250px;
+  }
+  .profile-details {
+    width: 90%;
+  }
+}
