--- a/client/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile/Profile.css
@@ -5,7 +5,6 @@
   justify-content: center;
   height: 10%;
   min-height: fit-content;
-  background-image: url('../../assets/Home/bg.jpg');
 }
 
 .profile-parent {
@@ -67,7 +66,7 @@
   height: 92%;
   width: 92%;
   border-radius: 50%;
-  background-image: url('../../assets/Home/profilephoto.png');
+  background-image: url('../../../assets/Home/profilephoto.png');
   background-size: cover;
   background-repeat: no-repeat;
 }
